add logout(swagger)
